# nyquest

./: Cargo.toml  LICENSE  README.md
.github/workflows/: backend-tests-async-stream.yml  backend-tests-async.yml  backend-tests-blocking-stream.yml  backend-tests-blocking.yml  cargo-hack.yml  lint.yml  run-tests.yml
backends/curl/: Cargo.toml  README.md
backends/curl/src/: async.rs  blocking.rs  curl_ng.rs  error.rs  lib.rs  mime_reader.rs  multi_easy.rs  request.rs  share.rs  state.rs  url.rs  urlencoded.rs
backends/curl/src/async/: dummy_read_task.rs  handler.rs  loop.rs  pause.rs  read_task.rs  set.rs  shared.rs
backends/curl/src/blocking/: handler.rs  multi_easy.rs  part_reader.rs  set.rs
backends/curl/src/curl_ng/: easy.rs  easy_callback.rs  easy_ref.rs  error_buf.rs  error_context.rs  ffi.rs  list.rs  mime.rs  multi.rs  multi_set.rs  multi_waker.rs  raw_easy.rs  raw_multi.rs
backends/curl/src/curl_ng/easy/: as_raw.rs  callback.rs  error_buf.rs  header_list.rs  info.rs  mime.rs  opt.rs  raw.rs  share.rs
backends/curl/src/curl_ng/mime/: ffi.rs  part.rs  raw.rs
backends/curl/src/curl_ng/multi/: raw.rs  set.rs  waker.rs
backends/nsurlsession/: Cargo.toml  README.md
backends/nsurlsession/src/: async.rs  blocking.rs  challenge.rs  client.rs  datatask.rs  error.rs  lib.rs  multipart.rs  response.rs  stream.rs
backends/nsurlsession/src/async/: waker.rs
backends/nsurlsession/src/blocking/: datatask_delegate.rs  waker.rs
backends/nsurlsession/src/datatask/: delegate.rs  generic_waker.rs  ivars.rs  rcblock_ext.rs  retained_ext.rs
backends/nsurlsession/src/stream/: dummy_writer.rs  ns_stream.rs  writer.rs
backends/reqwest/: Cargo.toml  README.md
backends/reqwest/src/: async.rs  blocking.rs  client.rs  error.rs  lib.rs  request.rs  response.rs
backends/reqwest/src/async/: stream.rs
backends/reqwest/src/blocking/: stream.rs
backends/reqwest/src/wasm/: async.rs  blocking.rs  options.rs  send_wrapper.rs
backends/reqwest/tests/: rt_compat.rs  wasm_smoke.rs
backends/winhttp/: Cargo.toml  README.md
backends/winhttp/src/: async.rs  blocking.rs  error.rs  handle.rs  lib.rs  multipart.rs  request.rs  session.rs  stream.rs  url.rs
backends/winhttp/src/async/: callback.rs  client.rs  context.rs  response.rs  state_fut.rs  threadpool.rs
backends/winhttp/src/blocking/: client.rs  response.rs
backends/winhttp/src/handle/: connection.rs  request.rs  session.rs
backends/winhttp/src/stream/: dummy_writer.rs  writer.rs
backends/winrt/: Cargo.toml  README.md
backends/winrt/src/: async.rs  async_utils.rs  blocking.rs  buffer.rs  client.rs  error.rs  ibuffer.rs  lib.rs  request.rs  response.rs  response_size_limiter.rs  string_pair.rs  timer.rs  uri.rs
backends/winrt/src/async/: iasync_like.rs  read_task.rs  stream_content.rs  timer_ext.rs
backends/winrt/src/async_utils/: iasync_ext.rs
backends/winrt/src/blocking/: stream_content.rs  timer_ext.rs
examples/: README.md
examples/cf-dns-query/: Cargo.toml
examples/cf-dns-query/src/: main.rs
examples/s3-cp/: Cargo.toml
examples/s3-cp/src/: file_location.rs  main.rs  s3_stream.rs
examples/wttr/: Cargo.toml
examples/wttr/src/: main.rs
nyquest-backend-tests/: Cargo.toml
nyquest-backend-tests/src/: fixtures.rs  hyper_fixture_collection.rs  lib.rs  request_ext.rs
nyquest-backend-tests/src/fixtures/: client_options.rs  errors.rs  get_json.rs  multipart.rs  requests.rs  responses.rs  scenarios.rs
nyquest-backend-tests/src/fixtures/client_options/: cache.rs  certificate_errors.rs  cookies.rs  headers.rs  proxy.rs  redirects.rs  request_timeout.rs  response_size.rs  user_agent.rs
nyquest-backend-tests/src/fixtures/errors/: invalid_json.rs  unsuccessful_status.rs
nyquest-backend-tests/src/fixtures/scenarios/: chunked_encoding.rs  early_drop.rs  request_header_override.rs
nyquest-interface/: Cargo.toml
nyquest-interface/src/: async.rs  blocking.rs  body.rs  client.rs  error.rs  lib.rs  register.rs  request.rs
nyquest-interface/src/async/: any.rs  backend.rs  body.rs
nyquest-interface/src/blocking/: any.rs  backend.rs  body.rs
nyquest-interface/src/body/: multipart.rs
nyquest-interface/src/client/: error.rs  options.rs
presets/default/: Cargo.toml  README.md
presets/default/src/: lib.rs  sys.rs
presets/rich/: Cargo.toml
presets/rich/src/: lib.rs
src/: async.rs  backend.rs  blocking.rs  body.rs  cache.rs  client.rs  error.rs  header.rs  lib.rs  register.rs  request.rs  status.rs
src/async/: any.rs  async_read_stream.rs  backend.rs  body.rs  client.rs  response.rs
src/backend/: async.rs  blocking.rs  error.rs  options.rs  register.rs
src/blocking/: any.rs  backend.rs  body.rs  client.rs  read_stream.rs  response.rs
src/client/: builder.rs  error.rs  options.rs  proxy.rs
