[workspace]
members = [
    "nyquest-interface",
    "nyquest-backend-tests",
    "backends/*",
    "examples/*",
    "presets/*",
]
resolver = "2"

[workspace.package]
authors = ["bdbai <bdbaiapp@163.com>"]
categories = ["web-programming::http-client"]
edition = "2021"
keywords = ["http", "client", "native", "winhttp", "nsurlsession"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bdbai/nyquest"
rust-version = "1.78"
version = "0.0.0-alpha.1"
exclude = [".vscode/*", ".github/*", "examples/README.md", "rustfmt.toml"]

[workspace.dependencies]
futures = "0.3"
thiserror = "1"
cfg-if = "1"

[package]
name = "nyquest"
description = "truly native HTTP client library"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
features = ["async", "blocking"]

[features]
async = ["dep:futures-io", "nyquest-interface/async"]
blocking = ["nyquest-interface/blocking"]
multipart = ["nyquest-interface/multipart"]

[dependencies]
nyquest-interface = { path = "nyquest-interface", default-features = false }
thiserror.workspace = true
futures-io = { version = "0.3", optional = true, default-features = false, features = [
    "std",
] }
