[workspace]
members = [
    "nyquest-interface",
    "nyquest-backend-tests",
    "backends/*",
    "examples/*",
    "presets/*",
]
resolver = "2"

[workspace.package]
authors = ["bdbai <bdbaiapp@163.com>"]
categories = ["web-programming::http-client"]
edition = "2021"
keywords = ["http", "client", "native", "winhttp", "nsurlsession"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bdbai/nyquest"
rust-version = "1.80"
exclude = [".vscode/*", ".github/*", "examples/README.md", "rustfmt.toml"]

[workspace.dependencies]
futures = "0.3.31"
thiserror = "2"
cfg-if = "1"
arc-swap = "1"

[package]
name = "nyquest"
description = "truly platform-native HTTP client library"
version = "0.1.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
features = ["async", "blocking", "multipart", "json"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["nyquest-interface/async"]
blocking = ["nyquest-interface/blocking"]
multipart = ["nyquest-interface/multipart"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
nyquest-interface = { version = "0.1.0", path = "nyquest-interface", default-features = false }
thiserror.workspace = true

serde = { version = "1", optional = true }
serde_json = { version = "1.0.140", optional = true }
