[package]
name = "nyquest-backend-tests"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
async = [
    "nyquest/async",
    "nyquest-backend-winrt?/async",
    "nyquest-backend-curl?/async",
    "nyquest-backend-nsurlsession?/async",
    "nyquest-backend-reqwest?/async",
]
blocking = [
    "nyquest/blocking",
    "nyquest-backend-winrt?/blocking",
    "nyquest-backend-curl?/blocking",
    "nyquest-backend-nsurlsession?/blocking",
    "nyquest-backend-reqwest?/blocking",
]
multipart = [
    "nyquest/multipart",
    "nyquest-backend-winrt?/multipart",
    "nyquest-backend-curl?/multipart",
    "nyquest-backend-nsurlsession?/multipart",
    "nyquest-backend-reqwest?/multipart",
]
winrt = ["dep:nyquest-backend-winrt"]
curl = ["dep:nyquest-backend-curl"]
nsurlsession = ["dep:nyquest-backend-nsurlsession"]
reqwest = ["dep:nyquest-backend-reqwest"]

[dev-dependencies]
hyper = { version = "1", features = ["http1", "client"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
form_urlencoded = "1"
memchr = "2"
multer = "3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
cfg-if.workspace = true

[dependencies]
nyquest = { path = "../", features = ["json"] }
nyquest-backend-winrt = { path = "../backends/winrt", optional = true }
nyquest-backend-curl = { path = "../backends/curl", optional = true }
nyquest-backend-nsurlsession = { path = "../backends/nsurlsession", optional = true }
nyquest-backend-reqwest = { path = "../backends/reqwest", optional = true }
