[package]
name = "nyquest-interface"
description = "Interface definitions for Nyquest backends"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["dep:futures-core"]
blocking = []
multipart = []
async-stream = ["async", "dep:futures-io"]
blocking-stream = ["blocking"]

[dependencies]
thiserror.workspace = true
cfg-if.workspace = true
futures-core = { version = "0.3", optional = true, features = [
    "alloc",
], default-features = false }
futures-io = { version = "0.3", optional = true, default-features = false, features = [
    "std",
] }
