[package]
name = "nyquest-backend-curl"
description = "libcurl backend for nyquest"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
exclude.workspace = true

[features]
default = ["ssl"]
async = [
    "nyquest/async",
    "dep:futures-channel",
    "dep:futures-util",
    "dep:slab",
    "curl/poll_7_68_0",
]
blocking = ["nyquest/blocking"]
multipart = ["nyquest/multipart"]
ssl = ["curl/ssl"]
charset = ["dep:iconv-native"]

[dependencies]
nyquest = { path = "../..", default-features = false }
curl = { version = "0.4", default-features = false }
curl-sys = { version = "0.4", default-features = false }
iconv-native = { version = "0.1.0-alpha.1", optional = true }
mio = { version = "1", optional = true, default-features = false }
futures-channel = { version = "0.3", optional = true, default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3", optional = true, default-features = false }
slab = { version = "0.4", optional = true, default-features = false }
