[package]
name = "nyquest-backend-curl"
description = "libcurl backend for nyquest"
version = "0.2.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["ssl"]
async = [
    "nyquest-interface/async",
    "dep:futures-channel",
    "dep:futures-util",
    "dep:slab",
]
blocking = ["nyquest-interface/blocking"]
multipart = ["nyquest-interface/multipart"]
ssl = ["curl/ssl"]
charset = ["dep:iconv-native"]
charset-defaults = ["charset", "iconv-native/default"]

[dependencies]
nyquest-interface = { version = "0.2.0", path = "../../nyquest-interface", default-features = false }
curl = { version = "0.4.47", features = [
    "poll_7_68_0",
], default-features = false }
curl-sys = { version = "0.4", default-features = false }
iconv-native = { version = "0.1.0", optional = true, default-features = false }
futures-channel = { version = "0.3", optional = true, default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3", optional = true, default-features = false, features = [
    "std",
] }
slab = { version = "0.4", optional = true, default-features = false }
pin-project-lite = "0.2"
libc = "0.2.42"
memchr = { version = "2", default-features = false }
