[package]
name = "nyquest-backend-nsurlsession"
description = "NSURLSession backend for nyquest"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
exclude.workspace = true

[features]
async = ["nyquest-interface/async", "dep:futures-util"]
blocking = ["nyquest-interface/blocking"]
multipart = ["nyquest-interface/multipart"]

[dependencies]
nyquest-interface = { path = "../../nyquest-interface", default-features = false }
cfg-if.workspace = true

[target.'cfg(target_vendor = "apple")'.dependencies]
block2 = { version = "0.6", default-features = false }
objc2 = { version = "0.6", default-features = false }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "alloc",
    "block2",
    "NSError",
    "NSObject",
    "NSString",
    "NSData",
    "NSURL",
    "NSDictionary",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
    "CFString",
] }
futures-util = { version = "0.3", optional = true, default-features = false, features = [
    "std",
] }
arc-swap = "1"
