[package]
name = "nyquest-backend-reqwest"
description = "reqwest backend for nyquest HTTP client library"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
features = ["async", "blocking", "multipart"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["async", "blocking", "default-tls"]
async = ["nyquest-interface/async"]
blocking = ["nyquest-interface/blocking"]
multipart = ["nyquest-interface/multipart", "reqwest/multipart"]
charset = ["dep:encoding_rs", "dep:mime"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
nyquest-interface = { version = "0.3.0", path = "../../nyquest-interface", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["cookies"] }
thiserror.workspace = true
futures.workspace = true
bytes = "1.0"
url = "2.4"
http = "1.0"
http-body = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3.16", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio] # TODO: wasm
default-features = false
features = ["rt-multi-thread"]
version = "1.0"

[dev-dependencies]
nyquest-backend-tests = { path = "../../nyquest-backend-tests" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3", features = ["executor"] }
async-std = { version = "1.12", features = ["attributes"] }
