[package]
name = "nyquest-backend-reqwest"
description = "reqwest backend for nyquest HTTP client library"
version = "0.2.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
features = ["async", "blocking", "multipart"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["default-tls", "reqwest/system-proxy"]
async = ["nyquest-interface/async"]
async-stream = ["async", "nyquest-interface/async-stream"]
blocking = ["nyquest-interface/blocking"]
blocking-stream = ["blocking", "nyquest-interface/blocking-stream"]
multipart = ["nyquest-interface/multipart", "reqwest/multipart"]
charset = ["dep:encoding_rs", "dep:mime"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls-minimal = ["reqwest/rustls-tls-manual-roots-no-provider"]

[dependencies]
nyquest-interface = { version = "0.4.0", path = "../../nyquest-interface", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["cookies"] }
cfg-if.workspace = true
thiserror.workspace = true
futures.workspace = true
url = "2.4"
http = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3.16", optional = true }
bytes = "1.0"
http-body = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
default-features = false
features = ["rt-multi-thread"]
version = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.iconv-native]
default-features = false
version = "0.1"
features = ["web-encoding"]

[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["stream", "cookies"]

[dev-dependencies]
nyquest-backend-tests = { path = "../../nyquest-backend-tests" }
tokio = { version = "1.0", features = ["macros"] }
futures = { version = "0.3", features = ["executor"] }
async-std = { version = "1.12", features = ["attributes"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
