[package]
name = "nyquest-backend-winrt"
description = "Windows.Web.Http.HttpClient backend for nyquest"
version = "0.0.1-alpha.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[features]
async = ["nyquest-interface/async"]
blocking = ["nyquest-interface/blocking"]
multipart = ["nyquest-interface/multipart"]

[target.'cfg(windows)'.dependencies]
windows-core = { version = "0.61", default-features = false }
windows-future = "0.2"
windows-collections = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Collections",
    "Storage_Streams",
    "Web_Http_Filters",
    "Web_Http_Headers",
    "Win32_System_WinRT",
]

[dependencies]
nyquest-interface = { path = "../../nyquest-interface", default-features = false }
cfg-if.workspace = true
