[package]
name = "nyquest-backend-winrt"
description = "Windows.Web.Http.HttpClient backend for nyquest"
version = "0.3.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["nyquest-interface/async", "dep:futures-util"]
async-stream = ["async", "nyquest-interface/async-stream"]
blocking = ["nyquest-interface/blocking"]
blocking-stream = ["blocking", "nyquest-interface/blocking-stream"]
multipart = ["nyquest-interface/multipart"]

[target.'cfg(windows)'.dependencies]
windows-core = { version = "0.61", default-features = false }
windows-future = "0.2"
windows-collections = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
    "Security_Cryptography_Certificates",
    "Storage_Streams",
    "System_Threading",
    "Web_Http_Filters",
    "Web_Http_Headers",
    "Win32_System_WinRT",
]

[dependencies]
nyquest-interface = { version = "0.3.0", path = "../../nyquest-interface", default-features = false }
cfg-if.workspace = true
futures-util = { version = "0.3", optional = true, default-features = false, features = [
    "io",
] }
