[package]
name = "cf-dns-query"
description = "Fetch and display DNS response from Cloudflare Public DNS"
edition.workspace = true

[dependencies]
nyquest = { path = "../..", features = ["async"] }
nyquest-preset-rich = { path = "../../presets/rich", features = ["async"] }
futures = { version = "0.3", features = ["executor"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
