[package]
name = "cf-dns-query"
description = "Fetch and display DNS response from Cloudflare Public DNS"
edition.workspace = true

[dependencies]
nyquest = { path = "../..", features = ["async"] }
nyquest-preset = { path = "../../presets/default", features = ["async"] }
futures = { version = "0.3", features = ["executor"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
nyquest-preset = { path = "../../presets/default", features = [
    "blocking",
    "auto-register",
] }
