[package]
name = "cf-dns-query"
description = "Fetch and display DNS response from Cloudflare Public DNS"
edition.workspace = true

[dependencies]
nyquest = { path = "../..", features = ["async"] }
nyquest-preset = { package = "nyquest-backend-curl", path = "../../backends/curl", features = [
    "async",
] }
futures = { version = "0.3", features = ["executor"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.44"

[dev-dependencies]
nyquest-preset = { package = "nyquest-backend-curl", path = "../../backends/curl", features = [
    "blocking",
    #"auto-register",
] }
