[package]
name = "wttr"
description = "Fetch and display weather information from wttr.in"
edition.workspace = true

[dependencies]
nyquest = { path = "../..", features = ["async", "blocking"] }

[target.'cfg(windows)'.dependencies]
nyquest-backend-winrt = { path = "../../backends/winrt", features = [
    "async",
    "blocking",
] }
