[package]
name = "wttr"
description = "Fetch and display weather information from wttr.in"
edition.workspace = true

[dependencies]
nyquest = { path = "../..", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
nyquest-preset-rich = { path = "../../presets/rich", features = ["blocking"] }
