[package]
name = "nyquest-preset"
description = "Nyquest preset configuration with up-to-date rich-featured backends"
version = "0.0.1-alpha.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[features]
async = [
    "nyquest/async",
    "nyquest-backend-curl/async",
    "nyquest-backend-winrt/async",
    "nyquest-backend-nsurlsession/async",
]
blocking = [
    "nyquest/blocking",
    "nyquest-backend-curl/blocking",
    "nyquest-backend-winrt/blocking",
    "nyquest-backend-nsurlsession/blocking",
]
multipart = [
    "nyquest/multipart",
    "nyquest-backend-curl/multipart",
    "nyquest-backend-winrt/multipart",
    "nyquest-backend-nsurlsession/multipart",
]

[dependencies]
nyquest = { path = "../..", default-features = false }

[target.'cfg(windows)'.dependencies]
nyquest-backend-winrt = { path = "../../backends/winrt", default-features = false }

[target.'cfg(target_vendor = "apple")'.dependencies]
nyquest-backend-nsurlsession = { path = "../../backends/nsurlsession", default-features = false }

[target.'cfg(not(any(windows, target_vendor = "apple")))'.dependencies]
nyquest-backend-curl = { path = "../../backends/curl", default-features = false }
