[package]
name = "nyquest-preset"
description = "Nyquest preset configuration with up-to-date rich-featured backends"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude.workspace = true

[features]
async = [
    "nyquest/async",
    "nyquest-backend-curl/async",
    "nyquest-backend-winrt/async",
    "nyquest-backend-nsurlsession/async",
]
async-stream = [
    "async",
    "nyquest/async-stream",
    "nyquest-backend-curl/async-stream",
    "nyquest-backend-winrt/async-stream",
    "nyquest-backend-nsurlsession/async-stream",
]
blocking = [
    "nyquest/blocking",
    "nyquest-backend-curl/blocking",
    "nyquest-backend-winrt/blocking",
    "nyquest-backend-nsurlsession/blocking",
]
blocking-stream = [
    "blocking",
    "nyquest/blocking-stream",
    "nyquest-backend-curl/blocking-stream",
    "nyquest-backend-winrt/blocking-stream",
    "nyquest-backend-nsurlsession/blocking-stream",
]
multipart = [
    "nyquest/multipart",
    "nyquest-backend-curl/multipart",
    "nyquest-backend-winrt/multipart",
    "nyquest-backend-nsurlsession/multipart",
]
auto-register = ["dep:ctor"]

[dependencies]
nyquest = { version = "0.3.0", path = "../..", default-features = false }
cfg-if = "1"
ctor = { version = "0.6", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
nyquest-backend-winrt = { version = "0.3.0", path = "../../backends/winrt", default-features = false }

[target.'cfg(target_vendor = "apple")'.dependencies]
nyquest-backend-nsurlsession = { version = "0.3.0", path = "../../backends/nsurlsession", default-features = false }

[target.'cfg(not(any(windows, target_vendor = "apple")))'.dependencies]
nyquest-backend-curl = { version = "0.3.0", path = "../../backends/curl", default-features = false, features = [
    "ssl",
] }
