[package]
name = "nyquest-preset-rich"
description = "Nyquest preset configuration with rich-featured backends"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
exclude.workspace = true

[features]
async = [
    "nyquest/async",
    "nyquest-backend-curl/async",
    "nyquest-backend-winrt/async",
]
blocking = [
    "nyquest/blocking",
    "nyquest-backend-curl/blocking",
    "nyquest-backend-winrt/blocking",
]

[dependencies]
nyquest = { path = "../..", default-features = false }

[target.'cfg(windows)'.dependencies]
nyquest-backend-winrt = { path = "../../backends/winrt", default-features = false }

[target.'cfg(not(windows))'.dependencies]
nyquest-backend-curl = { path = "../../backends/curl", default-features = false }
